sna/dri2: Fix interoperation with PRIME and older Xorg

When using the fake triple buffer implementation with recent enough Xorg
to support both real triple buffering and PRIME, we have to disable use
of SwapLimit as that freezes the client when we are instead faking the
triple buffer. (We have to use the fake support on those Xservers to
workaround crashes inside the Xserver.)

Reported-by: Paulo Dias <paulo.miguel.dias@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=85144#c12
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>